--- a/vote-ui/vote-ui.conf.tmpl
+++ b/vote-ui/vote-ui.conf.tmpl
@@ -3,13 +3,13 @@ server {
 
     root /usr/share/nginx/html;
 
-    location /api {
+    location /api/ {
 
         proxy_set_header Host vote;
         proxy_pass http://kamal-proxy:80/;
     }
 
-    location /healthz/ {
+    location /healthz {
         return 200 'OK!';
     }
 }
